bundle-cat-lib/src/tests/snapshots/bundle_cat_lib__tests__bundle__sleds_incomplete_bundle.snap
---
source: bundle-cat-lib/src/tests/bundle.rs
expression: "String::from_utf8_lossy(&out)"
---
CUBBY	SERIAL     	ID                                  	SCRIMLET
  	BRM99990001	aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee	   false

POSSIBLY UNREACHABLE SLEDS 
CUBBY	SERIAL     	ID                                  	MISSING BUNDLE OUTPUT
  	BRM99990001	aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee	services, zones
