bundle-cat-lib/src/tests/snapshots/bundle_cat_lib__tests__bundle__zones_by_serial.snap
---
source: bundle-cat-lib/src/tests/bundle.rs
expression: "String::from_utf8_lossy(&sled_serial_out)"
---
oxz_switch
